# double_ackerman_steering_stack

./: README.md  test1.yaml
src/Robot_urdf/: package.xml  setup.cfg  setup.py
src/Robot_urdf/Robot_urdf/: rear_steering_commander.py  vel_driver.py
src/Robot_urdf/config/: double_ackerman_params.yaml  gz_bridge.yaml
src/Robot_urdf/launch/: gz_simulator_launch.py  launch.py
src/Robot_urdf/meshes/collision/: Left_camera_link.STL  base_link.STL  drive_back_left_link.STL  left_wheel_link.STL  right_wheel_link.STL  steer_front_right_link.STL  tow_link.STL
src/Robot_urdf/meshes/visual/: Left_camera_link.STL  drive_back_right_link.STL  drive_front_left_link.STL  drive_front_right_link.STL  right_camera_link.STL  right_wheel_link.STL  steer_back_left_link.STL  steer_back_right_link.STL  steer_front_left_link.STL  tow_link.STL
src/Robot_urdf/urdf/: Robot_urdf.urdf  robot.xacro.sdf
src/Robot_urdf/world/: empty.world  generated.world  generated_empty.world
src/autonomous/agriculture_robot_navigation/: CMakeLists.txt  package.xml
src/autonomous/agriculture_robot_viz/: CMakeLists.txt  package.xml
src/double_steering_odom/: CMakeLists.txt  QUICK_START.md  README.md  SUMMARY.md  TF_PUBLISHING_GUIDE.md  TF_QUICK_REFERENCE.md  package.xml
src/double_steering_odom/config/: double_steering_odom.yaml
src/double_steering_odom/include/double_steering_odom/: double_steering_odom.hpp
src/double_steering_odom/launch/: double_steering_odom.launch.py
src/double_steering_odom/src/: double_steering_odom.cpp  double_steering_odom_node.cpp
src/vel_driver/: CHANGES.md  KINEMATIC_FIX_SUMMARY.md  KINEMATIC_IMPROVEMENTS.md  README.md  VISUAL_GUIDE.md  build_test.sh
src/vel_driver/config/: vel_driver.yaml
src/vel_driver/include/vel_driver/: vel_driver.hpp
src/vel_driver/src/: vel_driver.cpp
(+20 files in other folders)
